[package]
edition = "2021"
name = "textalyzer-wasm"
version = "0.1.0"
description = "Tool for analyzing text data"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ad-si/Textalyzer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0.114"
textalyzer = { path = "../textalyzer" }
wasm-bindgen = "0.2.92"
