[package]
authors = ["Adrian Sieber <mail@adriansieber.com>"]
categories = ["command-line-utilities", "text-processing", "visualization"]
description = """
  Analyze key metrics like \
  number of words, readability, and complexity \
  of any kind of text
  """
keywords = ["text", "analysis"]
license = "AGPL-3.0-or-later"
name = "textalyzer"
readme = "README.md"
repository = "https://github.com/ad-si/textalyzer"
version = "0.5.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
pad = "0.1.5"
unicode-width = "0.2.0"
terminal_size = "0.4.1"
colored = "3.0.0"
tempfile = "3.8.1"
ignore = "0.4.22"
rayon = "1.8.0"
memmap2 = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
